# agent

./: .agent_history  .gitignore  CHANGELOG.md  DELIVERY_SUMMARY.md  FIXME_CHECKLIST.md  INDEX.md  PROJECT_INSPECTION_IMPLEMENTATION_REPORT.md  PROJECT_INSPECTION_INTEGRATION_GUIDE.md  README.md  README_EN.md  TESTING_SUMMARY.txt  config.yaml  history.db  history_test.db  main.py  phase6_test.db  pyproject.toml  requirements.txt  run_10_tests.sh  sessions.db  sessions_history.db  setup.py  snake.py  snake_game.py  test_core_modules.py
.claude/: settings.local.json
agent_core/: __init__.py  acceptance_contract.py  agent.py  cli.py  completion.py  config.py  console_output.py  engineering_agent.py  events.py  orchestrator.py  project.py  project_inspection.py  security.py  session.py  skills.py  task_decomposer.py  task_state.py  terminal.py
agent_core/analysis/: __init__.py  classifier.py  observer.py
agent_core/interface/: __init__.py  repl.py
agent_core/memory/: __init__.py  history.py
agent_core/models/: __init__.py  client.py  manager.py
agent_core/tools/: __init__.py  browser.py  docker.py  files.py  git.py
agent_core/utils/: __init__.py  downloader.py  paths.py  token_counter.py
agent_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_results/: INDEX.md  QUICK_START.md  ROBUSTNESS_REPORT.md  SUMMARY.md  robustness_report.json
tests/: phase10_project.py  phase11_fix.py  phase12_download.py  phase13_fix.py  phase1_verify.py  phase2_verify.py  phase3_verify.py  phase4_verify.py  phase5_verify.py  phase6_verify.py  phase7_safety.py  phase8_repl.py  phase9_ux.py  test_glm_e2e.py  test_glm_fix.py  test_project_inspection_acceptance.py  test_project_inspection_stress.py  test_token_tracking.py  test_ux_improvements.py  test_verification.py
tests/scenarios/dummy_broken_calculator/: calc.py  main.py  project_inspection.json  project_inspection.md  test_calc.py  utils.py
